# karp-lex

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build-publish.yml  build.yml  coverage.yml
karp_lex/: __init__.py
karp_lex/application/dtos/: __init__.py  entry_dto.py
karp_lex/tests/: value_objects_unique_id_test.py
karp_lex/value_objects/: __init__.py  unique_id.py
