[project]
name = "karp-lex"
version = "0.1.0"
description = "The domain of the lexical platform Karp"
authors = [
    {name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
